# futebol-impostor-app

./: .gitignore  build.sh  justfile  pyproject.toml  render.yaml
base/templates/global/: base.html
core/: settings.py  urls.py
game/: admin.py  apps.py  models.py  signals.py  views.py
game/migrations/: 0001_initial.py  0002_alter_jogador_foto.py  0003_alter_jogador_foto.py
game/static/game/css/: style.css
game/static/game/js/: script.js
game/templates/game/: home.html
game/templates/game/partials/: _botoes_home.html  _jogador_card.html  _modal_config.html  _modal_jogo.html
